--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 											<li class="icon brands fa-discord">xSoundbreaker</li>
 											<li class="icon brands fa-instagram"><a href="https://www.instagram.com/titokylieishere/">@titokylieishere</a></li>
 											<li class="fa-brands fa-github-square"><a href="https://github.com/xSoundbreaker">xSoundbreaker</a></li>
+											<li class="fa-regular fa-file"><a href="https://drive.google.com/file/d/1F6NIy2duamQTnpwrq_4pXcAJA_gCU6kp/view?usp=drive_link"> Resume</a></li>
 										</ul>
 									</div>
 								</div>
